add 3 css ways to integrate into hmtl

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <h1>Style me via the external method</h1>
     <h2>I would like to be styled with the internal method, please</h2>
-    <button style="color: white; background-color: yellow;"type="button" name="button"></button>
+    <button title="Inline method" style="color: white; background-color: yellow;"type="button" name="button"></button>
   </body>
 </html>
