correct html and css excercise1

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     </style>
   </head>
   <body>
-    <h1>Style me via the external method</h1>
-    <h2>I would like to be styled with the internal method, please</h2>
-    <button title="Inline method" style="color: white; background-color: yellow;"type="button" name="button"></button>
+    <div>Style me via the external method</div>
+    <p>I would like to be styled with the internal method, please</p>
+    <button
+      title="Inline method"
+      style="color: white; background-color: orange; font-size: 18px;"
+      type="button"
+      name="Inline method">
+    </button>
   </body>
 </html>
