linked css to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title></title>
     <style>
@@ -13,11 +14,8 @@
   <body>
     <div>Style me via the external method</div>
     <p>I would like to be styled with the internal method, please</p>
-    <button
-      title="Inline method"
-      style="color: white; background-color: orange; font-size: 18px;"
-      type="button"
-      name="Inline method">
+    <button style="color: white; background-color: orange; font-size: 18px;">
+      Inline method
     </button>
   </body>
 </html>
